<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="98dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/serial_col"
        android:layout_width="0dp"
        android:layout_height="match_parent"
       android:layout_weight="1">

        <TextView
            android:id="@+id/serialTitle_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serial_number"
            android:textSize="@dimen/card_text_size"
            android:textColor="@color/main"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/card_parent_Bottom"
            android:layout_marginBottom="@dimen/card_middel"
            android:textAlignment="center"/>




        <TextView
            android:layout_width="106dp"
            android:layout_height="24dp"
            android:id="@+id/serial_txt"
            android:text="0"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/card_parent_Bottom"
            android:layout_marginTop="@dimen/card_middel"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/address_col"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/addressTitle_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_address"
            android:textSize="@dimen/card_text_size"
            android:textColor="@color/main"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/card_parent_Bottom"
            android:layout_marginBottom="@dimen/card_middel"
            android:textAlignment="center"/>


        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/address_txt"
            android:text="@string/customer_address"
            android:textSize="@dimen/card_text_size"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/card_parent_Bottom"
            android:layout_marginTop="@dimen/card_middel"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/treatmentDate_col"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">


        <TextView
            android:id="@+id/treatmentDateTitle_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/treatment_date"
            android:textSize="@dimen/card_text_size"
            android:textColor="@color/main"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/card_parent_Bottom"
            android:layout_marginBottom="@dimen/card_middel"
            android:textAlignment="center"/>

        <ImageView
            android:id="@+id/treatmentDate_img"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/ic_baseline_access_alarms_24"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/card_parent_Bottom"
            android:layout_marginTop="@dimen/card_middel"
            android:contentDescription="@string/treatment_date" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/showOnMap_col"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/showOnMap_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_parent_Bottom"
            android:text="@string/show_on_map"
            android:layout_marginBottom="@dimen/card_middel"
            android:textAlignment="center"
            android:textColor="@color/main"
            android:textSize="@dimen/card_text_size"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/showOnMap_img"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="@dimen/card_parent_Bottom"
            android:layout_marginTop="@dimen/card_middel"
            android:contentDescription="@string/show_on_map" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>